Add usbmuxd for phone tethering

--- a/manifests/client.yaml
+++ b/manifests/client.yaml
@@ -35,6 +35,7 @@ packages:
   - wireguard-tools
   - dymo-cups-drivers
   - eog mpv
+  - usbmuxd
   - inkscape brave-browser codium
 
   ## from gnome-desktop-pkgs.yaml
