--- a/manifests/client.yaml
+++ b/manifests/client.yaml
@@ -35,7 +35,8 @@ packages:
   - wireguard-tools
   - dymo-cups-drivers
   - eog mpv
-  - usbmuxd
+  - iwd wpa_supplicant
+  # - libimobiledevice libplist libusbmuxd usbmuxd libimobiledevice-utils ifuse
   - inkscape brave-browser codium
 
   ## from gnome-desktop-pkgs.yaml
