Enable grubby for client

--- a/manifests/server.yaml
+++ b/manifests/server.yaml
@@ -29,6 +29,7 @@ packages:
 # hard requirement, in which case the build will fail.
 exclude-packages:
   - NetworkManager
+  - grubby
 
 add-files:
   - [resources/matchbox.tar, /etc/container-save/matchbox.tar]
