--- a/manifests/base.yaml
+++ b/manifests/base.yaml
@@ -204,7 +204,7 @@ exclude-packages:
   - perl
   - nodejs
   - dnf
-  - grubby
+  # - grubby
   - cowsay  # Just in case
   # Let's make sure initscripts doesn't get pulled back in
   # https://github.com/coreos/fedora-coreos-tracker/issues/220#issuecomment-611566254
