--- a/manifests/client.yaml
+++ b/manifests/client.yaml
@@ -38,7 +38,8 @@ packages:
   - iwd wpa_supplicant
   # - libimobiledevice libplist libusbmuxd usbmuxd libimobiledevice-utils ifuse
   - inkscape brave-browser codium
-  - akmod-nvidia
+  - keepassxc
+  - akmod-nvidia xorg-x11-drv-nvidia xorg-x11-drv-nvidia-cuda
 
   ## from gnome-desktop-pkgs.yaml
   # - ModemManager
@@ -68,7 +69,7 @@ packages:
   # - gnome-initial-setup
   - gnome-remote-desktop
   - gnome-session-wayland-session
-  # - gnome-session-xsession
+  - gnome-session-xsession
   - gnome-settings-daemon
   - gnome-shell
   # - gnome-software
