Move packages to laptop build

--- a/builds/laptop/manifest.yaml
+++ b/builds/laptop/manifest.yaml
@@ -8,6 +8,9 @@ packages:
   - NetworkManager-config-connectivity-fedora
   - NetworkManager-wifi
   - NetworkManager-wwan
+  ## Nonfree and dependencies
+  - gnome-session-xsession
+  - akmod-nvidia xorg-x11-drv-nvidia xorg-x11-drv-nvidia-cuda
 
 # Things we don't expect to ship on the host.  We currently
 # have recommends: false so these could only come in via
