--- a/builds/laptop/manifest.yaml
+++ b/builds/laptop/manifest.yaml
@@ -8,6 +8,7 @@ packages:
   - NetworkManager-config-connectivity-fedora
   - NetworkManager-wifi
   - NetworkManager-wwan
+  - openconnect
   ## Nonfree and dependencies
   - gnome-session-xsession
   - akmod-nvidia xorg-x11-drv-nvidia xorg-x11-drv-nvidia-cuda
