--- a/builds/laptop/manifest.yaml
+++ b/builds/laptop/manifest.yaml
@@ -10,8 +10,9 @@ packages:
   - NetworkManager-wwan
   - openconnect
   ## Nonfree and dependencies
-  - gnome-session-xsession
   - akmod-nvidia xorg-x11-drv-nvidia xorg-x11-drv-nvidia-cuda
+  - gnome-session-xsession
+  - akmod-wl
 
 # Things we don't expect to ship on the host.  We currently
 # have recommends: false so these could only come in via
