Add openconnect to client

--- a/manifests/client.yaml
+++ b/manifests/client.yaml
@@ -36,6 +36,7 @@ packages:
   - dymo-cups-drivers
   - eog mpv
   - inkscape brave-browser codium
+  - openconnect
   ## Mobile WAN
   # - libimobiledevice libplist libusbmuxd usbmuxd libimobiledevice-utils ifuse
 
