Add steam to laptop

--- a/builds/laptop/manifest.yaml
+++ b/builds/laptop/manifest.yaml
@@ -7,11 +7,11 @@ packages:
   # - NetworkManager-bluetooth
   - NetworkManager-config-connectivity-fedora
   - NetworkManager-wifi
-  - NetworkManager-wwan
   ## Nonfree and dependencies
   - akmod-nvidia xorg-x11-drv-nvidia xorg-x11-drv-nvidia-cuda
   - gnome-session-xsession
   - akmod-wl
+  - steam
 
 # Things we don't expect to ship on the host.  We currently
 # have recommends: false so these could only come in via
