--- a/builds/laptop/manifest.yaml
+++ b/builds/laptop/manifest.yaml
@@ -3,10 +3,11 @@ include:
 
 packages:
   ## from fedora-common-ostree-pkgs.yaml
-  - NetworkManager
+  # - NetworkManager
   # - NetworkManager-bluetooth
-  - NetworkManager-config-connectivity-fedora
-  - NetworkManager-wifi
+  # - NetworkManager-config-connectivity-fedora
+  # - NetworkManager-wifi
+  - iwd wpa_supplicant
   ## Nonfree and dependencies
   - akmod-nvidia xorg-x11-drv-nvidia xorg-x11-drv-nvidia-cuda
   - gnome-session-xsession
@@ -16,4 +17,4 @@ packages:
 # have recommends: false so these could only come in via
 # hard requirement, in which case the build will fail.
 exclude-packages:
-  - systemd-networkd
+  - NetworkManager
