Add bluetooth firmware to laptop

--- a/builds/laptop/manifest.yaml
+++ b/builds/laptop/manifest.yaml
@@ -16,3 +16,7 @@ packages:
 # hard requirement, in which case the build will fail.
 exclude-packages:
   - systemd-networkd
+
+# bluetooth firmware
+add-files:
+  - [resources/BCM20702A1-0a5c-21e8.hcd, /lib/firmware/brcm/BCM20702A1-0a5c-21e8.hcd]
