Revert "Remove runc"
This reverts commit 573a84163f706a90266fc8c3f4eac69b462d1137.

--- a/manifests/base.yaml
+++ b/manifests/base.yaml
@@ -115,7 +115,7 @@ packages:
   - openssh-clients openssh-server
   # Container tooling
   - podman
-  - crun
+  - runc crun
   - skopeo
   # - toolbox
 
