--- a/manifests/client.yaml
+++ b/manifests/client.yaml
@@ -11,9 +11,9 @@ repos:
   - rpmfusion-free-updates
   - rpmfusion-nonfree
   - rpmfusion-nonfree-updates
+  - rpmfusion-nonfree-updates-testing
   - fedora-rawhide
   - brave-browser
-  - gitlab.com_paulcarroty_vscodium_repo
 
 default_target: graphical.target
 
@@ -35,7 +35,7 @@ packages:
   - wireguard-tools
   - dymo-cups-drivers
   - eog mpv
-  - inkscape krita brave-browser codium
+  - brave-browser
   ## Mobile WAN
   # - libimobiledevice libplist libusbmuxd usbmuxd libimobiledevice-utils ifuse
 
