--- a/builds/laptop/manifest.yaml
+++ b/builds/laptop/manifest.yaml
@@ -10,16 +10,18 @@ packages:
   - NetworkManager
   - NetworkManager-config-connectivity-fedora
   - NetworkManager-wifi
+  - NetworkManager-openconnect-gnome
   ## Nonfree and dependencies
   - akmod-nvidia xorg-x11-drv-nvidia xorg-x11-drv-nvidia-cuda nvidia-container-runtime
-  - gnome-session-xsession
-  - akmod-wl
 
 # Things we don't expect to ship on the host.  We currently
 # have recommends: false so these could only come in via
 # hard requirement, in which case the build will fail.
 exclude-packages:
   - systemd-networkd
+
+remove-from-packages:
+  - [gdm, /usr/lib/udev/rules.d/61-gdm.rules]
 
 # bluetooth firmware
 add-files:
