Enable nvidia wayland on grub

--- a/builds/laptop/image.yaml
+++ b/builds/laptop/image.yaml
@@ -13,9 +13,9 @@ extra-kargs:
     - iommu=pt
     - enforcing=0
     - elevator=noop
-    # This breaks boot unless the disk exists but there is no other way to add this
-    # - rd.driver.blacklist=nouveau
     - modprobe.blacklist=nouveau
+    # enable nvidia wayland
+    - nvidia-drm.modeset=1
 
 # Disable networking by default on firstboot. We can drop this once cosa stops
 # defaulting to `ip=dhcp,dhcp6 rd.neednet=1` when it doesn't see this key.
