--- a/builds/client/image.yaml
+++ b/builds/client/image.yaml
@@ -1,6 +1,6 @@
 # This replaces image.ks
 # size is the target disk size in GB.
-size: 4
+size: 6
 
 extra-kargs:
     # Disable SMT on systems vulnerable to MDS or any similar future issue.
@@ -13,12 +13,9 @@ extra-kargs:
     - iommu=pt
     - enforcing=0
     - elevator=noop
-    # This breaks boot unless the disk exists but there is no other way to add this
-    # - resume=LABEL=swap
-    # FCOS is not able to load these from modules.d
-    - mlx4_core.num_vfs=16
-    - mlx4_core.port_type_array=2
-    - mlx4_core.probe_vf=16
+    - modprobe.blacklist=nouveau
+    # Uncomment to enable nvidia wayland
+    # - nvidia-drm.modeset=1
 
 # Disable networking by default on firstboot. We can drop this once cosa stops
 # defaulting to `ip=dhcp,dhcp6 rd.neednet=1` when it doesn't see this key.
