--- a/builds/client/manifest.yaml
+++ b/builds/client/manifest.yaml
@@ -1,13 +1,35 @@
 include:
   - client.yaml
 
+repos:
+  - libnvidia-container
+  - nvidia-container-runtime
+  - gitlab.com_paulcarroty_vscodium_repo
+  # Latest nvidia drivers
+  # - rpmfusion-nonfree-updates-testing
+
 packages:
-  - systemd-networkd
-  - kea keepalived
-  - qemu-guest-agent
+  ## from fedora-common-ostree-pkgs.yaml
+  - NetworkManager
+  - NetworkManager-config-connectivity-fedora
+  - NetworkManager-wifi
+  - NetworkManager-openconnect-gnome
+  - codium inkscape krita
+  - dymo-cups-drivers
+  ## Nonfree and dependencies
+  - akmod-nvidia xorg-x11-drv-nvidia xorg-x11-drv-nvidia-cuda nvidia-container-runtime
+  - akmod-wl
 
 # Things we don't expect to ship on the host.  We currently
 # have recommends: false so these could only come in via
 # hard requirement, in which case the build will fail.
 exclude-packages:
-  - NetworkManager
+  - systemd-networkd
+
+# Uncomment to enable nvidia wayland
+# remove-from-packages:
+#   - [gdm, /usr/lib/udev/rules.d/61-gdm.rules]
+
+# bluetooth firmware
+add-files:
+  - [resources/BCM20702A1-0a5c-21e8.hcd, /lib/firmware/brcm/BCM20702A1-0a5c-21e8.hcd]
