Use brave-brwoser-beta

--- a/manifests/client.yaml
+++ b/manifests/client.yaml
@@ -12,7 +12,7 @@ repos:
   - rpmfusion-nonfree
   - rpmfusion-nonfree-updates
   - fedora-rawhide
-  - brave-browser
+  - brave-browser-beta
 
 default_target: graphical.target
 
