Remove cuda, add date stamp

--- a/builds/client/manifest.yaml
+++ b/builds/client/manifest.yaml
@@ -17,7 +17,7 @@ packages:
   - codium inkscape krita
   - dymo-cups-drivers
   ## Nonfree and dependencies
-  - akmod-nvidia xorg-x11-drv-nvidia xorg-x11-drv-nvidia-cuda nvidia-container-runtime
+  - akmod-nvidia nvidia-container-runtime
   - akmod-wl
 
 # Things we don't expect to ship on the host.  We currently
