--- a/builds/client/manifest.yaml
+++ b/builds/client/manifest.yaml
@@ -17,7 +17,10 @@ packages:
   - codium inkscape krita
   - dymo-cups-drivers
   ## Nonfree and dependencies
-  - akmod-nvidia nvidia-container-runtime
+  - akmod-nvidia xorg-x11-drv-nvidia
+  - xorg-x11-drv-nvidia-cuda xorg-x11-drv-nvidia-cuda-libs
+  - nvidia-container-runtime
+  - vdpauinfo libva-vdpau-driver libva-utils
   - akmod-wl
 
 # Things we don't expect to ship on the host.  We currently
