--- a/manifests/client.yaml
+++ b/manifests/client.yaml
@@ -20,7 +20,7 @@ packages:
   ## Custom
   - hdparm
   - nmap
-  - libva-utils vulkan-tools
+  - libva-utils vulkan vulkan-tools
   - libva-intel-hybrid-driver libva-intel-driver
   - libvirt-daemon-kvm libvirt-client virt-viewer
   - kubernetes-client
