--- a/builds/client/manifest.yaml
+++ b/builds/client/manifest.yaml
@@ -5,8 +5,7 @@ repos:
   - libnvidia-container
   - nvidia-container-runtime
   - gitlab.com_paulcarroty_vscodium_repo
-  # Latest nvidia drivers
-  # - rpmfusion-nonfree-updates-testing
+  - rpmfusion-nonfree-updates-testing
 
 packages:
   ## from fedora-common-ostree-pkgs.yaml
@@ -29,10 +28,7 @@ packages:
 exclude-packages:
   - systemd-networkd
 
-# Uncomment to enable nvidia wayland
-# remove-from-packages:
-#   - [gdm, /usr/lib/udev/rules.d/61-gdm.rules]
-
 # bluetooth firmware
 add-files:
   - [resources/BCM20702A1-0a5c-21e8.hcd, /lib/firmware/brcm/BCM20702A1-0a5c-21e8.hcd]
+  - [resources/62-gdm.rules, /usr/lib/udev/rules.d/62-gdm.rules]
