--- a/builds/client/manifest.yaml
+++ b/builds/client/manifest.yaml
@@ -33,4 +33,5 @@ exclude-packages:
 # bluetooth firmware
 add-files:
   - [resources/BCM20702A1-0a5c-21e8.hcd, /lib/firmware/brcm/BCM20702A1-0a5c-21e8.hcd]
-  - [resources/62-gdm.rules, /usr/lib/udev/rules.d/62-gdm.rules]
+  # Enable nvidia wayland
+  # - [resources/62-gdm-nvidia-wayland.rules, /usr/lib/udev/rules.d/62-gdm-nvidia-wayland.rules]
