--- a/builds/client/manifest.yaml
+++ b/builds/client/manifest.yaml
@@ -9,6 +9,8 @@ repos:
   - rpmfusion-nonfree-updates-testing
   - libnvidia-container
   - nvidia-container-runtime
+  - brave-browser-beta
+  - code
 
 packages:
   ## from fedora-common-ostree-pkgs.yaml
@@ -16,7 +18,10 @@ packages:
   - NetworkManager-config-connectivity-fedora
   - NetworkManager-wifi
   - NetworkManager-openconnect-gnome
+  - eog mpv
   - dymo-cups-drivers
+  - brave-browser
+  - code
   ## Nonfree and dependencies
   - akmod-nvidia xorg-x11-drv-nvidia
   - xorg-x11-drv-nvidia-cuda xorg-x11-drv-nvidia-cuda-libs
