--- a/manifests/base.yaml
+++ b/manifests/base.yaml
@@ -164,7 +164,7 @@ packages:
   - ncurses
   # file-transfer: note fuse-sshfs is not in RHEL
   # so we can't put it in file-transfer.yaml
-  - fuse-sshfs
+  # - fuse-sshfs
   # User experience
   # - console-login-helper-messages-motdgen
   # i18n
