--- a/manifests/client.yaml
+++ b/manifests/client.yaml
@@ -27,6 +27,7 @@ packages:
   - gnupg2
   - mkpasswd
   - wireguard-tools
+  - fuse-sshfs
   ## Mobile WAN
   # - libimobiledevice libplist libusbmuxd usbmuxd libimobiledevice-utils ifuse
 
