--- a/builds/client/manifest.yaml
+++ b/builds/client/manifest.yaml
@@ -9,7 +9,7 @@ repos:
   - libnvidia-container
   - nvidia-container-runtime
   - brave-browser-beta
-  - code
+  - gitlab.com_paulcarroty_vscodium_repo
 
 packages:
   ## from fedora-common-ostree-pkgs.yaml
@@ -17,12 +17,12 @@ packages:
   - NetworkManager-config-connectivity-fedora
   - NetworkManager-wifi
   - NetworkManager-openconnect-gnome
-  - eog mpv
   - dymo-cups-drivers
-  - brave-browser
   - fuse-sshfs
+  - eog mpv
+  - brave-browser
+  - codium
   ## Nonfree and dependencies
-  - code
   - akmod-nvidia xorg-x11-drv-nvidia
   - xorg-x11-drv-nvidia-cuda xorg-x11-drv-nvidia-cuda-libs
   - nvidia-container-runtime
