--- a/builds/client/manifest.yaml
+++ b/builds/client/manifest.yaml
@@ -9,19 +9,19 @@ repos:
   - libnvidia-container
   - nvidia-container-runtime
   - brave-browser-beta
-  - gitlab.com_paulcarroty_vscodium_repo
+  - code
 
 packages:
   ## from fedora-common-ostree-pkgs.yaml
   - NetworkManager
   - NetworkManager-config-connectivity-fedora
   - NetworkManager-wifi
-  - NetworkManager-openconnect-gnome
   - dymo-cups-drivers
   - fuse-sshfs
-  - eog mpv
+  - eog
+  - mpv
+  - code
   - brave-browser
-  - codium
   ## Nonfree and dependencies
   - akmod-nvidia xorg-x11-drv-nvidia
   - xorg-x11-drv-nvidia-cuda xorg-x11-drv-nvidia-cuda-libs
