--- a/builds/client/manifest.yaml
+++ b/builds/client/manifest.yaml
@@ -2,6 +2,7 @@ include:
   - client.yaml
 
 initramfs-args:
+  - --omit=nouveau
   - --add-drivers=nvidia
   - --add-drivers=nvidia_modeset
   - --add-drivers=nvidia_drm
