--- a/builds/client/manifest.yaml
+++ b/builds/client/manifest.yaml
@@ -16,6 +16,7 @@ repos:
   - libnvidia-container
   - nvidia-container-runtime
   - brave-browser-beta
+  - code
   # - gitlab.com_paulcarroty_vscodium_repo
 
 packages:
@@ -30,8 +31,8 @@ packages:
   # - inkspace
   # - krita
   # - blender
-  # - codium
   - brave-browser
+  - code
   ## Nonfree and dependencies
   - akmod-nvidia xorg-x11-drv-nvidia
   - xorg-x11-drv-nvidia-cuda xorg-x11-drv-nvidia-cuda-libs
