--- a/manifests/base.yaml
+++ b/manifests/base.yaml
@@ -174,6 +174,8 @@ packages:
   # zram-generator (but not zram-generator-defaults) for F33 change
   # https://github.com/coreos/fedora-coreos-tracker/issues/509
   - zram-generator
+  # resolved was broken out to its own package in rawhide/f35
+  - systemd-resolved
 
   # custom
   - hostname
