Update aio build

--- a/manifests/base.yaml
+++ b/manifests/base.yaml
@@ -117,7 +117,7 @@ packages:
   - openssh-clients openssh-server
   # Container tooling
   - podman
-  - runc
+  # - runc
   - skopeo
   # - toolbox
 
