--- a/manifests/base.yaml
+++ b/manifests/base.yaml
@@ -188,8 +188,7 @@ packages:
   - socat ldns-utils
   - ipmitool
   - pciutils
-  - cri-o
-  - cri-tools
+  - cri-o cri-tools conntrack-tools
 
 # This thing is crying out to be pulled into systemd, but that hasn't happened
 # yet.  Also we may want to add to rpm-ostree something like arch negation;
