--- a/manifests/client.yaml
+++ b/manifests/client.yaml
@@ -17,7 +17,7 @@ packages:
   - libvirt-daemon-kvm libvirt-client virt-viewer
   - kubectl
   - tmux xclip vim-enhanced strace
-  - podman buildah podman-compose
+  - podman buildah skopeo podman-compose slirp4netns
   - flatpak flatpak-builder
   - git-core
   - gnupg2
