--- a/builds/server/manifest.yaml
+++ b/builds/server/manifest.yaml
@@ -8,11 +8,14 @@ repos:
   - rpmfusion-nonfree-updates
   - libnvidia-container
   - nvidia-container-runtime
+  - tlp
+  - tlp-updates
 
 packages:
   - akmod-nvidia
   - nvidia-container-runtime
   - akmod-wl iwlax2xx-firmware hostapd iw
+  - acpi_call
 
 add-files:
   - [resources/BCM20702A1-0a5c-21e8.hcd, /lib/firmware/brcm/BCM20702A1-0a5c-21e8.hcd]
