Remove vfio stubs

--- a/builds/server/image.yaml
+++ b/builds/server/image.yaml
@@ -19,7 +19,7 @@ extra-kargs:
     # - video=efifb:off
     - rd.driver.pre=vfio-pci
     # - vfio-pci.ids=1002:ffffffff:ffffffff:ffffffff:00030000:ffff00ff,1002:ffffffff:ffffffff:ffffffff:00040300:ffffffff,10de:ffffffff:ffffffff:ffffffff:00030000:ffff00ff,10de:ffffffff:ffffffff:ffffffff:00040300:ffffffff
-    - vfio-pci.ids=10de:ffffffff:ffffffff:ffffffff:00030000:ffff00ff,10de:ffffffff:ffffffff:ffffffff:00040300:ffffffff
+    # - vfio-pci.ids=10de:ffffffff:ffffffff:ffffffff:00030000:ffff00ff,10de:ffffffff:ffffffff:ffffffff:00040300:ffffffff
     - rd.driver.blacklist=nouveau
     - modprobe.blacklist=nouveau
 
