--- a/builds/server/image.yaml
+++ b/builds/server/image.yaml
@@ -22,6 +22,7 @@ extra-kargs:
     # - vfio-pci.ids=10de:ffffffff:ffffffff:ffffffff:00030000:ffff00ff,10de:ffffffff:ffffffff:ffffffff:00040300:ffffffff
     - rd.driver.blacklist=nouveau
     - modprobe.blacklist=nouveau
+    - nvidia-drm.modeset=1
 
 # Disable networking by default on firstboot. We can drop this once cosa stops
 # defaulting to `ip=dhcp,dhcp6 rd.neednet=1` when it doesn't see this key.
