--- a/builds/client/manifest.yaml
+++ b/builds/client/manifest.yaml
@@ -33,8 +33,8 @@ packages:
   # - inkspace
   # - krita
   # - blender
-  - firefox
-  # - brave-browser
+  # - firefox
+  - brave-browser
   - code
   # - codium
   ## Nonfree and dependencies
