Remove nvidia and libvirt from server image

--- a/builds/server/manifest.yaml
+++ b/builds/server/manifest.yaml
@@ -1,20 +1,24 @@
 include:
   - server.yaml
 
-repos:
-  - rpmfusion-free
-  - rpmfusion-free-updates
-  - rpmfusion-nonfree
-  - rpmfusion-nonfree-updates
-  - libnvidia-container
-  - nvidia-container-runtime
-  - tlp
-  - tlp-updates
-
 packages:
-  - kmod-nvidia nvidia-container-runtime xorg-x11-drv-nvidia-cuda
-  - kmod-wl iwlax2xx-firmware hostapd iw
-  - acpi_call
-
-add-files:
-  - [resources/BCM20702A1-0a5c-21e8.hcd, /lib/firmware/brcm/BCM20702A1-0a5c-21e8.hcd]
+  - ipw2100-firmware
+  - ipw2200-firmware
+  - iwl100-firmware
+  - iwl1000-firmware
+  - iwl105-firmware
+  - iwl135-firmware
+  - iwl2000-firmware
+  - iwl2030-firmware
+  - iwl3160-firmware
+  - iwl3945-firmware
+  - iwl4965-firmware
+  - iwl5000-firmware
+  - iwl5150-firmware
+  - iwl6000-firmware
+  - iwl6000g2a-firmware
+  - iwl6000g2b-firmware
+  - iwl6050-firmware
+  - iwl7260-firmware
+  - iwlax2xx-firmware
+  - hostapd iw
