--- a/builds/client/manifest.yaml
+++ b/builds/client/manifest.yaml
@@ -15,34 +15,18 @@ repos:
   - rpmfusion-nonfree-updates
   - libnvidia-container
   - nvidia-container-runtime
-  - tlp
-  - tlp-updates
   - brave-browser-beta
   - code
-  # - gitlab.com_paulcarroty_vscodium_repo
 
 packages:
   ## from fedora-common-ostree-pkgs.yaml
-  - NetworkManager
-  - NetworkManager-config-connectivity-fedora
-  - NetworkManager-wifi
-  - dymo-cups-drivers
-  - fuse-sshfs
+  - cri-o cri-tools conntrack-tools kubelet kubectl
   - eog
   - mpv
-  # - inkspace
-  # - krita
-  # - blender
-  # - firefox
   - brave-browser
   - code
-  # - codium
+  - dymo-cups-drivers
   ## Nonfree and dependencies
   - kmod-nvidia nvidia-container-runtime xorg-x11-drv-nvidia-cuda
-  - vdpauinfo libva-vdpau-driver libva-utils
-  - kmod-wl iwlax2xx-firmware iw
-  - acpi_call
-
-# bluetooth firmware
-add-files:
-  - [resources/BCM20702A1-0a5c-21e8.hcd, /lib/firmware/brcm/BCM20702A1-0a5c-21e8.hcd]
+  - vdpauinfo libva-vdpau-driver
+  - kmod-wl
