--- a/manifests/base.yaml
+++ b/manifests/base.yaml
@@ -184,8 +184,7 @@ packages:
   - socat ldns-utils
   - ipmitool
   - pciutils
-  - smartmontools hdparm
-  - cri-o cri-tools conntrack-tools kubelet
+  - hdparm
 
 # This thing is crying out to be pulled into systemd, but that hasn't happened
 # yet.  Also we may want to add to rpm-ostree something like arch negation;
