--- a/manifests/server.yaml
+++ b/manifests/server.yaml
@@ -17,15 +17,12 @@ remove-files:
 
 packages:
   - fedora-release-coreos
-
   ## Custom
   - systemd-networkd
-  - libvirt-daemon-kvm
   - keepalived
-  - qemu-guest-agent
+  - cri-o cri-tools conntrack-tools kubelet
 
-# Things we don't expect to ship on the host.  We currently
-# have recommends: false so these could only come in via
-# hard requirement, in which case the build will fail.
 exclude-packages:
   - NetworkManager
+  - python3
+  - python3-libs
