--- a/builds/client/image.yaml
+++ b/builds/client/image.yaml
@@ -15,8 +15,7 @@ extra-kargs:
     - elevator=noop
     - rd.driver.blacklist=nouveau
     - modprobe.blacklist=nouveau
-    - nvidia-drm.modeset=1
-    # Brightness control in wayland
+    - nvidia_drm.modeset=1
     # - nvidia.NVreg_RegistryDwords=EnableBrightnessControl=1
 
 # Disable networking by default on firstboot. We can drop this once cosa stops
